# Estimates-Program

./: .gitattributes  .gitignore  README.md  config.toml  config.yml  environment.yml  main.py  pyproject.toml
.github/: .templatesyncignore  PULL_REQUEST_TEMPLATE.md  dependabot.yml
data/: welcome.txt
documentation/: Household-Characteristics.md  Housing-and-Households.md  Population-by-Age-Sex-Ethnicity.md  Population-by-Type.md  README.md  Staging.md  Startup.md  Utility.md
python/: ase.py  employment.py  hh_characteristics.py  hs_hh.py  insert_hs.py  insert_mgra.py  parsers.py  pop.py  pop_type.py  staging.py  startup.py  tests.py  utils.py
reporting/: check_ase_at_geography.sql  check_ase_at_jurisdiction.sql  check_consistency_between_hh_and_pop.sql  check_control_totals.sql  check_controls_city.sql  check_controls_jurisdiction.sql  check_controls_region_ase.sql  check_cross_table_consistency.sql  check_cross_table_pop_by_type.sql  check_cross_table_total_hh.sql  check_every_hh_has_hs.sql  check_every_hhp_has_hh.sql  check_householders_vs_adult_hhp.sql  check_householders_vs_hhp_15_plus.sql  check_householders_vs_households.sql  check_implied_hhp_vs_actual_hhp.sql  check_mgra_restrictions.sql  check_valid_places_to_live.sql  get_acs_ase_pop_at_geo.sql  reporting.py
sql/: create_objects.sql  delete_incomplete_run_ids.sql  get_city_controls_hh.sql  get_mgra_gq.sql  get_tract_controls_hh.sql  insert_hs.sql  insert_mgra.sql
wiki/: Census-Tract-Age-Sex-Ethnicity-Seed.md  Employment.md  Home.md  Household-Characteristics.md  Housing-and-Households.md  Staging.md  (+7 more)
(+75 files in other folders)
