[project]
name = "Estimates-Program"
version = "0.0.0" # Not used, refer to config.yml instead
requires-python = ">=3.11"
dependencies = [
    "cerberus>=1.3.8,<2.0.0",
    "mssql>=1.0.1,<2.0.0",
    "numpy>=2.4.0,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "polars>=1.36.1,<2.0.0",
    "pyodbc>=5.3.0,<6.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "sqlalchemy>=2.0.45,<3.0.0",
]
