[project]
name = "Estimates-Program"
version = "0.0.0" # Not used, refer to config.toml instead
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1,<27.0.0",
    "cerberus>=1.3.8,<2.0.0",
    "mssql>=1.0.1,<2.0.0",
    "numpy>=2.4.4,<3.0.0",
    "pandas>=3.0.2,<4.0.0",
    "pyodbc>=5.3.0,<6.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
]
